[package]
name = "winlock"
authors = ["Yehuthi <yehuthith@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yehuthi/winlock"
keywords = ["windows", "hotkey", "lock", "os", "login"]

[dependencies]
bitflags = "2.3.1"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]
