[package]
name = "winlock"
description = "A utility to customize the keyboard shortcut for session locking on Windows."
authors = ["Yehuthi <yehuthith@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yehuthi/winlock"
license = "MIT OR Apache-2.0"
keywords = ["windows", "hotkey", "lock", "os", "login"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
bitflags = "2.3.1"

# Binary
clap = { version = "4.3.3", features = ["derive"] }
ctrlc = "3.4.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Shutdown",
    "Win32_System_Registry"
]

[build-dependencies]
embed-manifest = "1.3.1"
